--- a/PenAndPaperInterface/GameMasterPAPI/Strings/CriticalInjuries_EN.resx
+++ b/PenAndPaperInterface/GameMasterPAPI/Strings/CriticalInjuries_EN.resx
@@ -117,55 +117,19 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="accept" xml:space="preserve">
-    <value>Accept</value>
+  <data name="criticalInjuries" xml:space="preserve">
+    <value />
   </data>
-  <data name="available" xml:space="preserve">
-    <value>available</value>
+  <data name="criticalInjury" xml:space="preserve">
+    <value />
   </data>
-  <data name="check" xml:space="preserve">
-    <value>Check</value>
+  <data name="injuries" xml:space="preserve">
+    <value />
   </data>
-  <data name="current" xml:space="preserve">
-    <value>current</value>
+  <data name="injury" xml:space="preserve">
+    <value />
   </data>
-  <data name="design" xml:space="preserve">
-    <value>Design</value>
-  </data>
-  <data name="english" xml:space="preserve">
-    <value>English</value>
-  </data>
-  <data name="genre" xml:space="preserve">
-    <value>Genre</value>
-  </data>
-  <data name="genres" xml:space="preserve">
-    <value>Genres</value>
-  </data>
-  <data name="german" xml:space="preserve">
-    <value>German</value>
-  </data>
-  <data name="language" xml:space="preserve">
-    <value>Language</value>
-  </data>
-  <data name="medieval" xml:space="preserve">
-    <value>Medieval</value>
-  </data>
-  <data name="modern" xml:space="preserve">
-    <value>Modern</value>
-  </data>
-  <data name="name" xml:space="preserve">
-    <value>Name</value>
-  </data>
-  <data name="page" xml:space="preserve">
-    <value>page</value>
-  </data>
-  <data name="return" xml:space="preserve">
-    <value>Return</value>
-  </data>
-  <data name="ruleBook" xml:space="preserve">
-    <value>Rule Book</value>
-  </data>
-  <data name="task" xml:space="preserve">
-    <value>Task</value>
+  <data name="severity" xml:space="preserve">
+    <value />
   </data>
 </root>
