--- a/PenAndPaperInterface/GameMasterPAPI/Strings/Careers_EN.resx
+++ b/PenAndPaperInterface/GameMasterPAPI/Strings/Careers_EN.resx
@@ -117,55 +117,55 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="accept" xml:space="preserve">
-    <value>Accept</value>
+  <data name="career" xml:space="preserve">
+    <value />
   </data>
-  <data name="available" xml:space="preserve">
-    <value>available</value>
+  <data name="druid" xml:space="preserve">
+    <value />
   </data>
-  <data name="check" xml:space="preserve">
-    <value>Check</value>
+  <data name="entertainer" xml:space="preserve">
+    <value />
   </data>
-  <data name="current" xml:space="preserve">
-    <value>current</value>
+  <data name="explorer" xml:space="preserve">
+    <value />
   </data>
-  <data name="design" xml:space="preserve">
-    <value>Design</value>
+  <data name="fighterPilot" xml:space="preserve">
+    <value />
   </data>
-  <data name="english" xml:space="preserve">
-    <value>English</value>
+  <data name="hacker" xml:space="preserve">
+    <value />
   </data>
-  <data name="genre" xml:space="preserve">
-    <value>Genre</value>
+  <data name="healer" xml:space="preserve">
+    <value />
   </data>
-  <data name="genres" xml:space="preserve">
-    <value>Genres</value>
+  <data name="knight" xml:space="preserve">
+    <value />
   </data>
-  <data name="german" xml:space="preserve">
-    <value>German</value>
+  <data name="leader" xml:space="preserve">
+    <value />
   </data>
-  <data name="language" xml:space="preserve">
-    <value>Language</value>
+  <data name="madScientist" xml:space="preserve">
+    <value />
   </data>
-  <data name="medieval" xml:space="preserve">
-    <value>Medieval</value>
+  <data name="priest" xml:space="preserve">
+    <value />
   </data>
-  <data name="modern" xml:space="preserve">
-    <value>Modern</value>
+  <data name="scoundrel" xml:space="preserve">
+    <value />
   </data>
-  <data name="name" xml:space="preserve">
-    <value>Name</value>
+  <data name="socialite" xml:space="preserve">
+    <value />
   </data>
-  <data name="page" xml:space="preserve">
-    <value>page</value>
+  <data name="soldier" xml:space="preserve">
+    <value />
   </data>
-  <data name="return" xml:space="preserve">
-    <value>Return</value>
+  <data name="starshipCaptain" xml:space="preserve">
+    <value />
   </data>
-  <data name="ruleBook" xml:space="preserve">
-    <value>Rule Book</value>
+  <data name="tradesperson" xml:space="preserve">
+    <value />
   </data>
-  <data name="task" xml:space="preserve">
-    <value>Task</value>
+  <data name="wizard" xml:space="preserve">
+    <value />
   </data>
 </root>
