--- a/PenAndPaperInterface/GameMasterPAPI/Strings/General_DE.resx
+++ b/PenAndPaperInterface/GameMasterPAPI/Strings/General_DE.resx
@@ -129,6 +129,9 @@
   <data name="german" xml:space="preserve">
     <value>Deutsch</value>
   </data>
+  <data name="gmName" xml:space="preserve">
+    <value>Name (Game Master)</value>
+  </data>
   <data name="language" xml:space="preserve">
     <value>Sprache</value>
   </data>
@@ -138,7 +141,19 @@
   <data name="modern" xml:space="preserve">
     <value>Modern</value>
   </data>
+  <data name="options" xml:space="preserve">
+    <value>Optionen</value>
+  </data>
+  <data name="quit" xml:space="preserve">
+    <value>Beenden</value>
+  </data>
   <data name="return" xml:space="preserve">
     <value>Zurück</value>
+  </data>
+  <data name="startGame" xml:space="preserve">
+    <value>Starten</value>
+  </data>
+  <data name="welcome" xml:space="preserve">
+    <value>Willkommen</value>
   </data>
 </root>
