--- a/PenAndPaperInterface/GameMasterPAPI/Strings/General_DE.resx
+++ b/PenAndPaperInterface/GameMasterPAPI/Strings/General_DE.resx
@@ -126,6 +126,9 @@
   <data name="english" xml:space="preserve">
     <value>Englisch</value>
   </data>
+  <data name="genre" xml:space="preserve">
+    <value>Genre</value>
+  </data>
   <data name="german" xml:space="preserve">
     <value>Deutsch</value>
   </data>
@@ -135,11 +138,29 @@
   <data name="language" xml:space="preserve">
     <value>Sprache</value>
   </data>
+  <data name="lastSave" xml:space="preserve">
+    <value>Letztes Speicherdatum</value>
+  </data>
+  <data name="magicalWorld" xml:space="preserve">
+    <value>Magische Welt</value>
+  </data>
   <data name="medieval" xml:space="preserve">
     <value>Mittelalterlich</value>
   </data>
+  <data name="medievalFantasy" xml:space="preserve">
+    <value>Mittelalter Fantasy</value>
+  </data>
   <data name="modern" xml:space="preserve">
     <value>Modern</value>
+  </data>
+  <data name="newGame" xml:space="preserve">
+    <value>Neues Spiel</value>
+  </data>
+  <data name="NOT_VALID" xml:space="preserve">
+    <value>NICHT GÜLTIG</value>
+  </data>
+  <data name="nuclearFallout" xml:space="preserve">
+    <value>Nuklearer Fallout</value>
   </data>
   <data name="options" xml:space="preserve">
     <value>Optionen</value>
@@ -152,6 +173,12 @@
   </data>
   <data name="savedGames" xml:space="preserve">
     <value>Gespeicherte Spiele</value>
+  </data>
+  <data name="show" xml:space="preserve">
+    <value>Anzeigen</value>
+  </data>
+  <data name="spaceOpera" xml:space="preserve">
+    <value>Weltall Seifenoper</value>
   </data>
   <data name="startGame" xml:space="preserve">
     <value>Starten</value>
