--- a/PenAndPaperInterface/GameMasterPAPI/Strings/General_EN.resx
+++ b/PenAndPaperInterface/GameMasterPAPI/Strings/General_EN.resx
@@ -150,14 +150,32 @@
   <data name="language" xml:space="preserve">
     <value>Language</value>
   </data>
+  <data name="lastSave" xml:space="preserve">
+    <value>Last Save</value>
+  </data>
+  <data name="magicalWorld" xml:space="preserve">
+    <value>Magical World</value>
+  </data>
   <data name="medieval" xml:space="preserve">
     <value>Medieval</value>
+  </data>
+  <data name="medievalFantasy" xml:space="preserve">
+    <value>Medieval Fantasy</value>
   </data>
   <data name="modern" xml:space="preserve">
     <value>Modern</value>
   </data>
   <data name="name" xml:space="preserve">
     <value>Name</value>
+  </data>
+  <data name="newGame" xml:space="preserve">
+    <value>New Game</value>
+  </data>
+  <data name="NOT_VALID" xml:space="preserve">
+    <value>NOT VALID</value>
+  </data>
+  <data name="nuclearFallout" xml:space="preserve">
+    <value>Nuclear Fallout</value>
   </data>
   <data name="options" xml:space="preserve">
     <value>Options</value>
@@ -176,6 +194,12 @@
   </data>
   <data name="savedGames" xml:space="preserve">
     <value>Saved Games</value>
+  </data>
+  <data name="show" xml:space="preserve">
+    <value>Show</value>
+  </data>
+  <data name="spaceOpera" xml:space="preserve">
+    <value>Space Opera</value>
   </data>
   <data name="startGame" xml:space="preserve">
     <value>Start Game</value>
